examples/errors/parsing/refined_add.rcn
// Refined program with a function call
fun add (x : Int) -> Int [pure] = x
main : (r : Int) [pure] =
  add(42) : (r : Int)
